large commit with images and game states

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,11 +7,18 @@
     <title>GBDA302 — Week 3 Demo</title>
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
     <link rel="stylesheet" href="style.css" />
+    <!--Andreea added fonts manually from Google font library-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Playpen+Sans:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="site-header">
       <div class="wrap">
-        <h1 class="title">Win or Lose</h1>
+        <h1 class="title">Last Call</h1>
         <p class="subtitle">GBDA302 • Week 3 — Game States, UI, Menus</p>
       </div>
     </header>
@@ -22,7 +29,8 @@
           <!-- p5 canvas mounts here -->
         </div>
         <p class="hint">
-          Tip: use Enter / I on the start screen. Press R on win/lose to return.
+          Tip: Be careful when clicking as each choice has an impact. Press R on
+          win/lose to return.
         </p>
       </section>
     </main>
@@ -30,7 +38,8 @@
     <footer class="site-footer">
       <div class="wrap">
         <small
-          >© 2026 Dr. Karen Cochrane &amp; David Han · Built with p5.js</small
+          >© 2026 Andreea McKague · Built with p5.js and code by Dr. Karen
+          Cochrane and David Han</small
         >
       </div>
     </footer>
@@ -41,6 +50,28 @@
     <script src="instructions.js"></script>
     <script src="game.js"></script>
     <script src="win.js"></script>
+
+    <!--Andreea added more choice files-->
+    <script src="choice1.js"></script>
+    <script src="choice1Result1.js"></script>
+
+    <script src="choice2.js"></script>
+
+    <script src="choice2Result1.js"></script>
+    <script src="choice2Result2.js"></script>
+
+    <script src="choice3.js"></script>
+
+    <script src="choice3Result1.js"></script>
+    <script src="choice3Result2.js"></script>
+
+    <script src="choice4.js"></script>
+
+    <script src="choice4Result1.js"></script>
+    <script src="choice4Result2.js"></script>
+
+    <script src="choice5.js"></script>
+
     <script src="lose.js"></script>
     <script src="main.js"></script>
   </body>
